k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-flask-service
  labels:
    app: flask-app
spec:
  selector:
    app: app-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: http
